# game-community-postgresql

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
docs/: STUDY.md
migrations/: 20240715182214_init.down.sql  20240715182214_init.up.sql
src/: main.rs
src/controllers/: jwt.rs  mod.rs  user.rs
src/middlewares/: cors.rs  jwt_auth.rs  mod.rs
src/models/: game.rs  jwt.rs  mod.rs  score.rs  user.rs
src/routes/: config.rs  game.rs  mod.rs  router.rs  user.rs
src/utils/: consts.rs  mod.rs
