[package]
name = "game-community-postgresql"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
# 開発環境
unused = "allow"

[[bin]]
name = "game-community-postgresql"
path = "src/main.rs"


[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.10.0", features = ["fast-rng", "serde", "v4", "v7"] }
